update screen size

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 620px) {
+@media (max-width: 650px) {
     /* CSS rules to apply for mobile devices */
     .esravye0 {
         width: 300px;
