--- a/style.css
+++ b/style.css
@@ -8,5 +8,16 @@
     .esravye0 {
         width: 300px;
     }
+
+    .stContainer {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .stContainer > * {
+      width: 50%;
+      padding: 0 10px;
+      box-sizing: border-box;
+    }
 }
 
