--- a/style.css
+++ b/style.css
@@ -6,11 +6,12 @@
 
 @media (min-width: 400px) and (max-width: 650px) {
     .esravye0 {
-        width: 200px;
+        width: 195px;
     }
     .css-ocqkz7 {
     flex-wrap: nowrap;
     }
 
-}
+    .css-r421ms {
+    }
 
