--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 }
 
 @media (min-width: 400px) and (max-width: 650px) {
+
+    .esravye0 {
+        width: 195px;
+    }
     .css-ocqkz7 {
     flex-wrap: nowrap;
     }
