random css changes

--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@
     .esravye0 {
         width: 195px;
     }
-    .css-ocqkz7 {
+    .esravye3 {
     flex-wrap: nowrap;
     }
 
-    .css-r421ms {
+    .en8akda1 {
         border: none;
     }
 
