css width proportional

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 @media (min-width: 400px) and (max-width: 650px) {
 
     .esravye0 {
-        width: 195px;
+        width: 45vw;
     }
     .esravye3 {
     flex-wrap: nowrap;
